--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: Zardoz89/Zardoz89.github.io
+  github: Zardoz89
   instagram:
-  linkedin:
+  linkedin: AAIAAAxjVyoBTLPOTfC56TrnqutmpwwgaKL1hH4
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: ZardoZ89
