--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: Zardoz89
   instagram:
-  linkedin: AAIAAAxjVyoBTLPOTfC56TrnqutmpwwgaKL1hH4
+  linkedin: pub/luis-panadero-guardeño/59/730/36
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: ZardoZ89
