--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   instagram:
   linkedin: pub/luis-panadero-guardeño/59/730/36
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: ZardoZ89
   stackoverflow: users/770931/zardoz89 # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -53,7 +53,10 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+markdown: kramdown #redcarpet
+highlighter: pygments
+permalink: pretty # /:title/
+paginate: 5
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
@@ -79,6 +82,8 @@ gems:
 
 # Exclude these files from your production _site
 exclude:
+    - less
+    - node_modules
     - Gemfile
     - Gemfile.lock
     - LICENSE
