--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/888483?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: luis(punto)panadero(algarroba)com
   facebook:
   flickr:
   github: Zardoz89
@@ -29,7 +29,7 @@ footer-links:
   twitter: ZardoZ89
   stackoverflow: users/770931/zardoz89 # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: u/0/118048310717476799717 # anything in your profile username that comes after plus.google.com/
+  googleplus: # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -53,7 +53,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: kramdown #redcarpet
+markdown: kramdown
 highlighter: pygments
 permalink: pretty # /:title/
 paginate: 5
@@ -83,6 +83,7 @@ gems:
 # Exclude these files from your production _site
 exclude:
     - less
+    - scss
     - node_modules
     - Gemfile
     - Gemfile.lock
